# EconML

./: .gitignore  .pre-commit-config.yaml  LICENSE  Other inferences test.ipynb  README.md  azure-pipelines-steps.yml  azure-pipelines.yml  econml-0.9.0-cp37-cp37m-macosx_10_9_x86_64.whl  econml-0.9.0-cp37-cp37m-manylinux1_i686.whl  econml-0.9.0-cp37-cp37m-manylinux1_x86_64.whl  econml-0.9.0-cp37-cp37m-manylinux2010_i686.whl  econml-0.9.0-cp37-cp37m-manylinux2010_x86_64.whl  econml-0.9.0-cp37-cp37m-win32.whl  econml-0.9.0-cp37-cp37m-win_amd64.whl  econml-0.9.0-cp38-cp38-macosx_10_9_x86_64.whl  econml-0.9.0-cp38-cp38-manylinux1_i686.whl  econml-0.9.0-cp38-cp38-manylinux1_x86_64.whl  econml-0.9.0-cp38-cp38-manylinux2010_i686.whl  econml-0.9.0-cp38-cp38-manylinux2010_x86_64.whl  econml-0.9.0-cp38-cp38-win32.whl  econml-0.9.0-cp38-cp38-win_amd64.whl  econml-0.9.0b2-cp36-cp36m-win32.whl  econml-0.9.0b2-cp36-cp36m-win_amd64.whl  econml-0.9.0b2-cp37-cp37m-win32.whl  econml-0.9.0b2-cp37-cp37m-win_amd64.whl  econml-0.9.0b2-cp38-cp38-win32.whl  econml-0.9.0b2-cp38-cp38-win_amd64.whl  genindex.html  index.html  lkg-notebook.txt  lkg.txt  objects.inv  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
Website/: EconMLWeb.sln  Testpage.html
_autosummary/: econml._cate_estimator.html  econml._ortho_learner.html  econml.cate_interpreter.SingleTreeCateInterpreter.html  econml.cate_interpreter.SingleTreePolicyInterpreter.html  econml.dml.CausalForestDML.html  econml.dml.DML.html  econml.dml.KernelDML.html  econml.dml.LinearDML.html  econml.dml.NonParamDML.html  econml.dml.SparseLinearDML.html  econml.dml._rlearner.html  econml.dowhy.DoWhyWrapper.html  econml.dr.DRLearner.html  econml.dr.ForestDRLearner.html  econml.dr.LinearDRLearner.html  econml.dr.SparseLinearDRLearner.html  econml.federated_learning.FederatedEstimator.html  econml.grf.CausalForest.html  econml.grf.CausalIVForest.html  econml.grf.LinearMomentGRFCriterion.html  econml.grf.LinearMomentGRFCriterionMSE.html  econml.grf.MultiOutputGRF.html  econml.grf.RegressionForest.html  econml.grf._base_grf.BaseGRF.html  econml.grf._base_grftree.GRFTree.html  econml.inference.BootstrapInference.html  econml.inference.EmpiricalInferenceResults.html  econml.inference.GenericModelFinalInference.html  econml.inference.GenericModelFinalInferenceDiscrete.html  econml.inference.GenericSingleTreatmentModelFinalInference.html  econml.inference.LinearModelFinalInference.html  econml.inference.LinearModelFinalInferenceDiscrete.html  econml.inference.NormalInferenceResults.html  econml.inference.PopulationSummaryResults.html  econml.inference.StatsModelsInference.html  econml.inference.StatsModelsInferenceDiscrete.html  econml.inference._bootstrap.html  econml.iv.dml.DMLIV.html  econml.iv.dml.NonParamDMLIV.html  econml.iv.dml.OrthoIV.html  (+41 more)
_images/: inheritance-02070a2030e1c4d3c7c547782a075cb6d5f72d70.png.map  inheritance-99d1c5529ff5dfaa5df59e8a8fcd7d4eaeea6266.png.map  inheritance-acbe62381fa0f339be9477205055c2ab89fc5a5f.png.map  inheritance-c5444489306f8ae7e4562bbfb29fd792c149c022.png.map  inheritance-dd08097e28f4382b17a7c0072f1f3a4bfbcc5e0d.png.map  inheritance-e859537eaa373949c92fc9e814a13774df177917.png.map
_modules/: index.html
doc/: conf.py  index.rst  reference.rst
econml/: __init__.py  _cate_estimator.py  _causal_tree.py  _influence.py  _lazy.py  _ortho_learner.py  _rlearner.py  _shap.py  _tree_exporter.py  _version.py  automated_ml.py  bootstrap.py  cate_estimator.py  cate_interpreter.py  causal_forest.py  causal_tree.py  causal_tree_node.pyx  deepiv.md  deepiv.py  dgp.py  dml.py  dml_iv.py  dot_exporter.py  dowhy.py  drlearner.py  federated_learning.py  inference.py  metalearners.py  ortho_forest.py  ortho_iv.py  selective_regularization.py  setup.py  shap.py  sklearn_extensions.py  test_integration.py  two_stage_least_squares.py  unit_tests.py  utilities.py  xgb_utilities.py
monte_carlo_tests/: monte_carlo_honestforest.py  monte_carlo_statsmodels.py
montecarlo/: README.md  dml_te_config.py  dml_te_functions.py  econml_dml_te.py  mc_from_config.py  run_mc_from_config.py  sweep_config_dml_te.py  sweep_mc_from_config.py
notebooks/: CATE validation.ipynb  Causal Forest and Orthogonal Random Forest Examples.ipynb  Causal Model Selection with the RScorer.ipynb  Choosing First Stage Models.ipynb  Competing Risks HTE Examples.ipynb  Cython_grf_clean.ipynb  Cython_testing_grf.ipynb  Cython_testing_grf_IV.ipynb  Cython_testing_grf_IV_local_linear.ipynb  Cython_testing_grf_local_linear.ipynb  Deep IV Example - Revised.ipynb  Deep IV Examples.ipynb  Double Machine Learning Examples.ipynb  Doubly Robust Learner and Interpretability.ipynb  Dynamic Double Machine Learning Examples.ipynb  ForestLearners Basic Example.ipynb  Generalized Random Forests.ipynb  Hands-on Part I -- Estimating Price Elasticity of Orange Juice Demand - Complete.ipynb  Hands-on Part I -- Estimating Price Elasticity of Orange Juice Demand.ipynb  Hands-on Part I -- Estimating Price Elasticity of Orange Juice Demand​.ipynb  Hands-on Part II -- Estimating the Effect of Schooling on Wages - Complete.ipynb  Hands-on Part II -- Estimating the Effect of Schooling on Wages.ipynb  Interpretability with SHAP.ipynb  Metalearners Examples.ipynb  OrthoIV and DRIV Examples.ipynb  OrthoLearner.ipynb  Orthogonal Random Forest Examples.ipynb  Policy Learning with Trees and Forests.ipynb  RScorer.ipynb  Scaling EconML using Ray.ipynb  SearchEstimatorList functionality.ipynb  SubsampledHonestForest.ipynb  Survival HTE Examples.ipynb  Treatment Featurization Examples.ipynb  Treatment_Featurization_Example.ipynb  Weighted Double Machine Learning Examples.ipynb  grf README Example.ipynb  validation_notebook.ipynb
scripts/: memory_test_script.py
spec/: api.html  causal_intro.html  community.html  comparison.html  estimation.html  estimation_dynamic.html  estimation_iv.html  faq.html  federated_learning.html  flowchart.html  inference.html  interpretability.html  model_selection.html  motivation.html  overview.html  references.html  (+2 more)
(+515 files in other folders)
