[pycodestyle]
ignore=E402,W504
max-line-length=119

[pydocstyle]
; Use numpy style
convention=numpy

[metadata]
name = econml
author = Microsoft Corporation
description = This package contains several methods for calculating Conditional Average Treatment Effects
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = treatment-effect
url = https://github.com/Microsoft/EconML
project_urls =
    Bug Tracker=https://github.com/Microsoft/EconML/Issues
    Source Code=https://github.com/Microsoft/EconML
    Documentation=https://econml.azurewebsites.net/
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux

[options]
packages = find_namespace:
install_requires =
    numpy
    scipy > 1.4.0
    scikit-learn > 0.22.0, < 1.2
    sparse
    joblib >= 0.13.0
    statsmodels >= 0.10
    pandas
    shap >= 0.38.1, < 0.41.0
    dowhy < 0.8
    lightgbm
test_suite = econml.tests
tests_require =
    pytest
    pytest-xdist < 2.0.0
    pytest-cov < 3.0.0

[options.extras_require]
automl =
    ; Disabled due to incompatibility with scikit-learn
    ; azureml-sdk[explain,automl] == 1.0.83
    azure-cli
tf =
    ; This extra is not currently compatible with python 3.9 or above because of tensorflow breaking changes
    keras < 2.4;python_version < '3.9'
    tensorflow > 1.10, < 2.3;python_version < '3.9'
    ; Version capped due to tensorflow incompatibility
    protobuf < 4
plt =
    graphviz
    matplotlib
all =
    azure-cli
    keras < 2.4
    tensorflow > 1.10, < 2.3
    ; Version capped due to tensorflow incompatibility
    protobuf < 4
    matplotlib
    
[options.packages.find]
include =
    econml
    econml.*
exclude = 
    econml.tests

[options.package_data]
; include all CSV files as data
* = *.csv
    *.jbl

; coverage configuration
[coverage:run]
omit = econml/tests/*
branch = True
; need to explicitly add support for multiprocessing for OrthoForest
concurrency =
    thread
    multiprocessing
