[pycodestyle]
ignore=E402,W504
max-line-length=119

[pydocstyle]
; Use numpy style
convention=numpy

[options]
packages = find_namespace:
    
[options.packages.find]
include =
    econml
    econml.*
exclude = 
    econml.tests

[options.package_data]
; include all CSV files as data
* = *.csv
    *.jbl
